tests/NormalTests/paczka1/small_fuzzy/56742133.err
Error in line 3: cdlUNC S750 71,3
Error in line 6: A301 A94 89,5
Error in line 7: A301 S750 26,2
